--- a/pom.xml
+++ b/pom.xml
@@ -84,6 +84,11 @@
             </dependency>
             <dependency>
                 <groupId>com.food.ordering.system</groupId>
+                <artifactId>common-dataaccess</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.food.ordering.system</groupId>
                 <artifactId>restaurant-domain-core</artifactId>
                 <version>${project.version}</version>
             </dependency>
